infra/k3s/argocd/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.passthrough: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  tls:
  - hosts:
    - argocd.bareuptime.co
    secretName: argocd-tls-cert
  rules:
  - host: argocd.bareuptime.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
